--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -52,3 +52,11 @@ body.loggedin .property-list-header {
        margin-top: 10px;
     }
 }
+
+.property-detail-overview-item {
+   font-size: 20px;
+
+   span {
+       padding-left: 10px;
+   }
+}
