--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -169,7 +169,7 @@
    <div class="row">
        <div class="col-sm-12">
            <div class="row">
-               <div class="col-sm-4">
+               <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-6 control-label"># of Occupants</label>
                        <div class="col-sm-6">
@@ -177,19 +177,11 @@
                        </div>
                    </div>
                </div>
-               <div class="col-sm-5">
+               <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-6 control-label">Annual Income</label>
                        <div class="col-sm-6">
                           <input class="form-control input-lg" type="number" ng-model="profile.movein.annualIncome">
-                       </div>
-                   </div>
-               </div>
-               <div class="col-sm-3">
-                   <div class="form-group">
-                       <label class="col-sm-6 control-label">Pets</label>
-                       <div class="col-sm-6">
-                          <input class="form-control input-lg" type="text" ng-model="profile.pets">
                        </div>
                    </div>
                </div>
@@ -205,6 +197,62 @@
                </div>
            </div>
        </div>
+   </div>
+
+</fieldset>
+
+<fieldset class="fieldset-required">
+   <legend>Pets</legend>
+   <div class="row">
+      <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Dogs</label>
+               <div class="col-sm-4">
+                      <select class="form-control input-lg" ng-model="profile.pets.dogs" required>
+                          <option value="">None</option>
+                          <option value="0">0</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3+">3+</option>
+                      </select>
+               </div>
+           </div>
+      </div>
+      <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Cats</label>
+               <div class="col-sm-4">
+                      <select class="form-control input-lg" ng-model="profile.pets.cats" required>
+                          <option value="">None</option>
+                          <option value="0">0</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3+">3+</option>
+                      </select>
+               </div>
+           </div>
+      </div>
+      <div class="col-sm-4">
+           <div class="form-group">
+               <div class="col-sm-8">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Other</label>
+                       <div class="col-sm-8">
+                           <input class="form-control input-lg" type="text" ng-model="profile.pets.otherDesc" placeholder="Ex. Turtle">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-4">
+                      <select class="form-control input-lg" ng-model="profile.pets.other" required>
+                          <option value="">None</option>
+                          <option value="0">0</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3+">3+</option>
+                      </select>
+               </div>
+           </div>
+      </div>
    </div>
 
 </fieldset>
