property form validation

--- a/angular/src/less/form.less
+++ b/angular/src/less/form.less
@@ -71,3 +71,11 @@ body .checkbox .control-label {
   padding-top: 0px;
 }
 
+form.show-errors {
+    
+    .form-control.ng-invalid {
+        border-color: @brand-danger;  
+    }
+
+}
+
