--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -1,4 +1,4 @@
-<form method="post" name="propertyForm" class="form-horizontal" ng-controller="OwnerPropertyCtrl">
+<form method="post" name="propertyForm" class="form-horizontal" ng-class="{ 'show-errors': showErrors }" ng-controller="OwnerPropertyCtrl">
 
     <div class="buttons" ng-show="add">
         <button type="button" class="btn btn-rented" style="margin-right: 10px" ng-click="save(property)">Save</button>
@@ -41,7 +41,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Street</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.street" autofocus>
+                      <input class="form-control input-lg" type="text" ng-model="property.address.street" autofocus required>
                    </div>
                </div>
            </div>
@@ -49,7 +49,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Apt. number</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.aptNumber">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.aptNumber" required>
                    </div>
                </div>
            </div>
@@ -61,7 +61,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">City</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.city">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.city" required>
                    </div>
                </div>
            </div>
@@ -69,7 +69,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">State</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.state">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}" required>
                    </div>
                </div>
            </div>
@@ -80,7 +80,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Zip</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.zip">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.zip" ng-pattern="/[0-9]{5}/" required>
                    </div>
                </div>
            </div>
@@ -158,7 +158,7 @@
                <div class="form-group">
                    <label class="col-sm-7 control-label">Area <sub>(sq.ft.)</sub></label>
                    <div class="col-sm-5">
-                      <input class="form-control input-lg" type="number" ng-model="property.area">
+                      <input class="form-control input-lg" type="number" ng-model="property.area" max="99999">
                    </div>
                </div>
            </div>
@@ -175,7 +175,7 @@
        </div>
        <div class="row">
           <div class="col-sm-12">
-             <textarea class="form-control" ng-model="property.description" rows="10"></textarea>
+             <textarea class="form-control" ng-model="property.description" rows="10" required></textarea>
           </div>
        </div>
     </fieldset>
@@ -189,13 +189,13 @@
                <div class="form-group">
                    <label class="col-sm-8 control-label">Suggested Monthly Rent</label>
                    <div class="col-sm-4">
-                      <input class="form-control input-lg" type="number" ng-model="property.targetRent" placeholder="US Dollars">
+                      <input class="form-control input-lg" type="text" ng-model="property.targetRent" placeholder="US Dollars" ui-money-mask="0" required>
                    </div>
                </div>
                <div class="form-group" ng-hide="property.securitySameAsRent">
                    <label class="col-sm-8 control-label">Security Deposit</label>
                    <div class="col-sm-4">
-                      <input class="form-control input-lg" type="number" ng-model="property.securityDeposit" placeholder="US Dollars">
+                      <input class="form-control input-lg" type="text" ng-model="property.securityDeposit" placeholder="US Dollars" ui-money-mask="0" ng-required="!property.securitySameAsRent">
                    </div>
                </div>
                <div class="form-group">
@@ -213,7 +213,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Lease Term</label>
                    <div class="col-sm-8">
-                      <select class="form-control input-lg" ng-model="property.leaseTerm">
+                      <select class="form-control input-lg" ng-model="property.leaseTerm" required>
                           <option value="">Select...</option>
                           <option value="1">Month-to-month</option>
                           <option value="12">1 year</option>
@@ -232,7 +232,7 @@
                <div class="form-group" ng-show="property.dynamicPricing">
                    <label class="col-sm-8 control-label">Lowest Acceptable Offer</label>
                    <div class="col-sm-4">
-                      <input class="form-control input-lg" type="number" ng-model="property.lowestRent" placeholder="US Dollars">
+                      <input class="form-control input-lg" type="text" ng-model="property.lowestRent" placeholder="US Dollars" ui-money-mask="0" ng-required="property.dynamicPricing">
                    </div>
                </div>
            </div>
@@ -261,13 +261,18 @@
                <div class="form-group">
                    <label class="col-sm-6 control-label">Available Date</label>
                    <div class="col-sm-6">
-                      <input class="form-control input-lg" type="date" ng-model="property.availableDate">
+                        <div class="input-group input-group-lg">
+                          <input type="text" class="form-control" datepicker-popup="MM/dd/yyyy" ng-model="property.availableDate" is-open="opened" ng-required="true" close-text="Close" min="minDate" min-date="minDate" max-date="'2015-06-22'" datepicker-localdate>
+                          <span class="input-group-btn">
+                            <button type="button" class="btn btn-rented" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                          </span>
+                        </div>
                    </div>
                </div>
                <div class="form-group" ng-show="property.pets.allowDogs || property.pets.allowCats || property.pets.allowOther">
                    <label class="col-sm-6 control-label">Pet Deposit per Pet</label>
                    <div class="col-sm-6">
-                      <input class="form-control input-lg" type="number" ng-model="property.pets.deposit" placeholder="US Dollars">
+                      <input class="form-control input-lg" type="text" ng-model="property.pets.deposit" placeholder="US Dollars" ui-money-mask="0" ng-required="property.pets.allowDogs || property.pets.allowCats || property.pets.allowOther">
                    </div>
                </div>
            </div>
@@ -297,7 +302,7 @@
                </div>
                <div class="form-group">
                    <div class="col-sm-12">
-                      <input class="form-control input-lg" type="text" ng-model="property.pets.other" ng-show="property.pets.allowOther" placeholder="Ex. Submit Request, Turtles, Snakes">
+                      <input class="form-control input-lg" type="text" ng-model="property.pets.other" ng-show="property.pets.allowOther" placeholder="Ex. Submit Request, Turtles, Snakes" ng-required="property.pets.allowOther">
                    </div>
                </div>
            </div>
