--- a/angular/src/app/owner/partials/property-teaser.tpl.html
+++ b/angular/src/app/owner/partials/property-teaser.tpl.html
@@ -1,4 +1,6 @@
+<div style="min-height: 234px;">
 <img ng-src="{{property.pictures[0]}}" class="img-responsive">
+</div>
 <p><strong>Number of offers:</strong> {{property.bids.length}}</p>
 <p>
     <strong ng-hide="property.bestOffer.accepted">Best offer:</strong> 
