--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form method="post" class="form-horizontal bottom-buffer-xl">
+    <form name="profileForm" method="post" class="form-horizontal bottom-buffer-xl" ng-class="{ 'show-errors': showErrors }">
 
         <button type="button" class="btn btn-rented pull-right" ng-click="save()">Save</button>
 
@@ -23,7 +23,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">First</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob" required>
                                </div>
                            </div>
                        </div>
@@ -31,7 +31,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">Last</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson" required>
                                </div>
                            </div>
                        </div>
@@ -41,7 +41,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">E-Mail</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
+                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com" required>
                                </div>
                            </div>
                        </div>
@@ -49,7 +49,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">Phone</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000" ui-mask="999.999.999" required>
                                </div>
                            </div>
                        </div>
