--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Phone</label>
                     <div class="col-sm-8">
-                       <input type="tel" class="form-control input-lg" placeholder="" ng-model="data.phone" required/>
+                       <input type="text" class="form-control input-lg" ng-model="data.phone" ui-mask="999.999.999" required>
                     </div>
                 </div>
 
