--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -49,7 +49,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">Phone</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000" ui-mask="999.999.999" required>
+                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" ui-mask="999.999.999" required>
                                </div>
                            </div>
                        </div>
