--- a/angular/src/app/tenant/partials/verify-profile.tpl.html
+++ b/angular/src/app/tenant/partials/verify-profile.tpl.html
@@ -1,2 +1,2 @@
-<div ng-include="'tenant/partials/profile.tpl.html'" ng-controller="TenantProfileCtrl">
+<div ng-include="'tenant/partials/profile.tpl.html'">
 </div>
