--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -80,7 +80,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Zip</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.zip" ng-pattern="/[0-9]{5}/" required>
+                      <input class="form-control input-lg" type="text" ng-model="property.address.zip" ng-pattern="/[0-9]{5}/" maxlength="5" required>
                    </div>
                </div>
            </div>
