--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -49,7 +49,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">Phone</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" ui-mask="999.999.999" required>
+                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" ui-mask="999.999.9999" required>
                                </div>
                            </div>
                        </div>
@@ -96,7 +96,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">State</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.address.state">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}">
                        </div>
                    </div>
                </div>
@@ -107,7 +107,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Zip</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.address.zip">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.zip" ng-pattern="/[0-9]{5}/" maxlength="5">
                        </div>
                    </div>
                </div>
