--- a/angular/src/app/tenant/partials/profile-page-2.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-2.tpl.html
@@ -1,4 +1,4 @@
-<fieldset>
+<fieldset class="required">
    <legend>References</legend>
 
    <div class="row">
@@ -9,19 +9,27 @@
        </div>
    </div>
    <div class="row">
-       <div class="col-sm-6">
+       <div class="col-sm-4">
            <div class="form-group">
-               <label class="col-sm-4 control-label">Phone</label>
+               <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" autofocus>
+                  <input class="form-control input-lg" type="text" ng-model="profile.currentOwner.name" required>
                </div>
            </div>
        </div>
-       <div class="col-sm-6">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" ui-mask="999.999.9999" required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.currentOwner.email">
+                  <input class="form-control input-lg" type="email" ng-model="profile.currentOwner.email" required>
                </div>
            </div>
        </div>
@@ -35,19 +43,27 @@
        </div>
    </div>
    <div class="row">
-       <div class="col-sm-6">
+       <div class="col-sm-4">
            <div class="form-group">
-               <label class="col-sm-4 control-label">Phone</label>
+               <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.pastOwner.phone">
+                  <input class="form-control input-lg" type="text" ng-model="profile.pastOwner.name" required>
                </div>
            </div>
        </div>
-       <div class="col-sm-6">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.pastOwner.phone" ui-mask="999.999.9999" required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.pastOwner.email">
+                  <input class="form-control input-lg" type="email" ng-model="profile.pastOwner.email" required>
                </div>
            </div>
        </div>
@@ -61,19 +77,27 @@
        </div>
    </div>
    <div class="row">
-       <div class="col-sm-6">
+       <div class="col-sm-4">
            <div class="form-group">
-               <label class="col-sm-4 control-label">Phone</label>
+               <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.personal.phone">
+                  <input class="form-control input-lg" type="text" ng-model="profile.personal.name" required>
                </div>
            </div>
        </div>
-       <div class="col-sm-6">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.personal.phone" ui-mask="999.999.9999" required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.personal.email">
+                  <input class="form-control input-lg" type="email" ng-model="profile.personal.email" required>
                </div>
            </div>
        </div>
@@ -89,7 +113,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Contact Info</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.emergencyPhone" placeholder="000.000.000">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.emergencyPhone" ui-mask="999.999.9999" required>
                </div>
            </div>
        </div>
@@ -97,7 +121,7 @@
 
 </fieldset>
 
-<fieldset class="fieldset-required">
+<fieldset>
    <legend>Vehicle Details</legend>
 
    <div class="row">
@@ -105,7 +129,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Year</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="number" ng-model="profile.vehicle.year">
+                  <input class="form-control input-lg" type="number" ng-model="profile.vehicle.year" required>
                </div>
            </div>
        </div>
@@ -113,7 +137,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Make</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.make">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.make" required>
                </div>
            </div>
        </div>
@@ -121,7 +145,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Model</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.model">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.model" required>
                </div>
            </div>
        </div>
@@ -129,7 +153,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Vehicle</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.vehicle">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.vehicle" required>
                </div>
            </div>
        </div>
@@ -145,7 +169,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Job Title</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.jobTitle">
+                  <input class="form-control input-lg" type="text" ng-model="profile.jobTitle" required>
                </div>
            </div>
        </div>
