--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -34,7 +34,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Password</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control input-lg" placeholder="8 or more characters" ng-model="data.pass" required>
+                        <input type="password" class="form-control input-lg" placeholder="8 or more characters" ng-model="data.pass" ngMinLength="8" required>
                     </div>
                 </div>
 
