--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -17,8 +17,8 @@
             <a href="http://www.craigslist.org/about/sites#US" class="next" target="_blank">Post on Craigslist</a>
             <div class="vertical-buffer">
                 <table class="table table-bordered table-condensed" style="width:100%">
-                    <tr class="success">
-                        <td><h6><a href="#">Firebase link to property</a></h6></td>
+                    <tr>
+                        <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{addedPropertyId}}"></td>
                     </tr>
                     <tr>
                         <td><h6>Copy and past the link above into your Craigslist Ad</h6></td>
