--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -8,21 +8,26 @@
     <div class="form-group">
         <label class="col-sm-4 control-label">Price</label>
         <div class="col-sm-8">
-            <input class="form-control input-lg" type="number" ng-model="bid.rentAmount" min="{{property.lowestRent}}" ng-disabled="!property.dynamicPricing" required autofocus>
+            <input class="form-control input-lg" type="number" ng-model="bid.rentAmount" min="{{property.lowestRent}}" ng-disabled="!property.dynamicPricing||profile.type=='owner'" required autofocus>
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-sm-4 control-label">Move-In Date</label>
         <div class="col-sm-8">
-            <input type="date" class="form-control input-lg" ng-model="bid.moveInDate" min="{{property.availableDate}}" required>
+            <div class="input-group input-group-lg">
+              <input type="text" class="form-control" datepicker-popup="MM/dd/yyyy" ng-model="bid.moveInDate" is-open="opened" ng-required="true" close-text="Close" min="property.availableDate" min-date="property.availableDate" max-date="'2022-06-22'" datepicker-localdate ng-disabled="profile.type=='owner'">
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-rented" ng-click="open($event)" ng-disabled="profile.type=='owner'"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-sm-4 control-label">Lease Terms</label>
         <div class="col-sm-8">
-            <select class="form-control input-lg" ng-model="bid.leaseTerm" ng-options="term.months as term.desc for term in terms" ng-disabled="terms.length==1" required>
+            <select class="form-control input-lg" ng-model="bid.leaseTerm" ng-options="term.months as term.desc for term in terms" ng-disabled="terms.length==1||profile.type=='owner'" required>
               <option value="">Select...</option>
             </select>
         </div>
@@ -30,11 +35,11 @@
 
     <div class="row" style="margin-top: 30px;">
         <div class="col-xs-6 text-right">
-            <a class="btn btn-rented" ng-click="watch(property)" ng-hide="inWatchlist(property)">Add To Watchlist</a>
+            <a class="btn btn-rented" ng-click="watch(property)" ng-hide="inWatchlist(property)" ng-disabled="profile.type=='owner'">Add To Watchlist</a>
             <a class="btn btn-rented" ng-click="unwatch(property)" ng-show="inWatchlist(property)&&profile">Remove From Watchlist</a>
         </div>
         <div class="col-xs-6">
-            <button type="submit" class="btn btn-rented" ng-hide="bid.userId">Make An Offer</button>
+            <button type="submit" class="btn btn-rented" ng-hide="bid.userId" ng-disabled="profile.type=='owner'">Make An Offer</button>
             <button type="button" class="btn btn-rented" ng-show="bid.userId&&profile" ng-click="editMyBid(bid,property)">Edit My Offer</button>
         </div>
     </div>
