Multiple changes based on Joel's feedback
- Changes are in the forms and required state

--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -17,7 +17,7 @@
                   </div>
                   <div class="col-sm-8">
                     <h4 style="font-size: 24px; font-weight: bold;">{{profile.firstName}} {{profile.lastName}}</h4>
-                    <p>I have {{activeProperties}} condo(s) for rent.</p>
+                    <p>I have {{activeProperties}} unit(s) for rent.</p>
                   </div>
                 </div>
             </div>
