--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -49,7 +49,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Apt. number</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.aptNumber" required>
+                      <input class="form-control input-lg" type="text" ng-model="property.address.aptNumber">
                    </div>
                </div>
            </div>
