--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -23,7 +23,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">First</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob" required>
+                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="" required>
                                </div>
                            </div>
                        </div>
@@ -31,7 +31,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">Last</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson" required>
+                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="" required>
                                </div>
                            </div>
                        </div>
@@ -41,7 +41,7 @@
                            <div class="form-group">
                                <label class="col-sm-4 control-label">E-Mail</label>
                                <div class="col-sm-8">
-                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com" required>
+                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="" required>
                                </div>
                            </div>
                        </div>
@@ -60,7 +60,7 @@
         </fieldset>
 
         <fieldset>
-            <legend>Address</legend>
+            <legend>Business Address</legend>
 
             <div class="row">
 
