--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -15,7 +15,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">First</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob" autofocus required>
+                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="" autofocus required>
                        </div>
                    </div>
                </div>
@@ -23,7 +23,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Last</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson" required>
+                          <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="" required>
                        </div>
                    </div>
                </div>
@@ -33,7 +33,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">E-Mail</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com" required>
+                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="" required>
                        </div>
                    </div>
                </div>
@@ -52,7 +52,7 @@
 </fieldset>
 
 <fieldset class="fieldset-required">
-    <legend>Address</legend>
+    <legend>Current Address</legend>
 
     <div class="row">
 
@@ -107,16 +107,17 @@
 
 </fieldset>
 
-<fieldset class="fieldset-required">
+<fieldset>
     <legend>Prior Address</legend>
+    <p><small>If less than 2 years at current address</small></p>
 
     <div class="row">
-
+        
        <div class="col-sm-6">
            <div class="form-group">
                <label class="col-sm-4 control-label">Street</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.street" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.street">
                </div>
            </div>
        </div>
@@ -124,7 +125,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Apt. number</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.aptNumber" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.aptNumber">
                </div>
            </div>
        </div>
@@ -136,7 +137,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">City</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.city" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.city">
                </div>
            </div>
        </div>
@@ -144,7 +145,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">State</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}">
                </div>
            </div>
        </div>
@@ -155,7 +156,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Zip</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.zip" ng-pattern="/[0-9]{5}/" maxlength="5" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.zip" ng-pattern="/[0-9]{5}/" maxlength="5">
                </div>
            </div>
        </div>
@@ -169,22 +170,35 @@
    <div class="row">
        <div class="col-sm-12">
            <div class="row">
+               
                <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-6 control-label"># of Occupants</label>
-                       <div class="col-sm-6">
-                          <input class="form-control input-lg" type="number" ng-model="profile.movein.occupantsNo" required>
-                       </div>
-                   </div>
+           <div class="form-group">
+               <label class="col-sm-6 control-label">Total # of occupants</label>
+               <div class="col-sm-4">
+                      <select class="form-control input-lg" ng-model="profile.movein.occupantsNo">
+                          <option value="">Select...</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                          <option value="6">6</option>
+                          <option value="7">7</option>
+                          <option value="8">8</option>
+                          <option value="9">9</option>
+                          <option value="10+">10+</option>
+                      </select>
                </div>
-               <div class="col-sm-6">
+           </div>
+      </div>
+               <!--div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-6 control-label">Annual Income</label>
                        <div class="col-sm-6">
                           <input class="form-control input-lg" type="number" ng-model="profile.movein.annualIncome" required>
                        </div>
                    </div>
-               </div>
+               </div-->
            </div>
            <div class="row">
                <div class="col-sm-12">
