--- a/angular/src/app/owner/tenants.tpl.html
+++ b/angular/src/app/owner/tenants.tpl.html
@@ -18,7 +18,7 @@
 
 <div class="container">
 
-    <div class="row bottom-buffer" ng-repeat="property in properties | loadProperty:'rented'">
+    <div class="row bottom-buffer" ng-repeat="property in properties | loadProperty:'rented':'lazy'">
         {{income(property)}}
         <div class="col-sm-2 vcenter">
            <img ng-src="{{property.pictures[0]}}" class="img-responsive">
