--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -51,7 +51,7 @@
     <h5 class="top-buffer">Recent Offers</h5>
 
     <div class="row properties">
-        <div class="col-sm-3" ng-repeat="property in properties | loadProperty">
+        <div class="col-sm-3" ng-repeat="property in properties | loadProperty:'':'lazy'">
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
             <button ng-click="accepted(property)" class="btn btn-rented-success" ng-show="isAccepted(property,profile)">Accepted</button>
