--- a/angular/src/app/tenant/partials/profile.tpl.html
+++ b/angular/src/app/tenant/partials/profile.tpl.html
@@ -1,7 +1,7 @@
     <form name="profileForm" method="post" class="form-horizontal bottom-buffer-xl button-container" ng-controller="TenantProfileCtrl" ng-class="{ 'show-errors': showErrors }">
 
         <div class="buttons">
-           <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile)">Save</button>
+           <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
            <a ng-click="page=1" class="prev" ng-class="{ active: page==1 }">1</a>
            <a ng-click="page=2" class="next" ng-class="{ active: page==2 }">2</a>
         </div>
