--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -2,7 +2,7 @@
     <h1>My Offers</h1>
 
     <div class="row properties">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty:'':'lazy'">
             <div ng-repeat="bid in property.bids | loadBid" style="display: none;"></div> <!-- FIXME -->
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row properties bottom-buffer-xl">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in watchlist | loadProperty">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in watchlist | loadProperty:'':'lazy'">
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <!--a href="http://www.craigslist.org/about/sites#US" class="btn btn-rented" target="_blank">See More On Craigslist</a-->
             <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
